checking something new for fixed images on mobile and ipad

--- a/style.css
+++ b/style.css
@@ -370,11 +370,6 @@ a, a:hover, a:focus {
   width: auto;
 }
 
-.clicka {
-  height: 3vh;
-  margin-left: -9vw;
-  margin-bottom: 7vh;
-}
 
 .stuckinspace {
   display: inline;
@@ -388,11 +383,6 @@ a, a:hover, a:focus {
   width: auto;
 }
 
-.clickb {
-  height: 3vh;
-  margin-left: -9vw;
-  margin-bottom: 7vh;
-}
 
 /*page 4*/
 .page4wrap {
